--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "env-cmd": "^10.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.1.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "sass": "^1.45.0",
     "swiper": "^6.8.3",
+    "ts-essentials": "^9.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
