--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "env-cmd": "^10.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.45.0",
     "swiper": "^6.8.3",
     "ts-essentials": "^9.0.0",
